# tangi

./: .dir-locals.el  CONTRIBUTING.org  Cargo.toml  README.org  hello.tn  sketch.tn  small.tn
backend/cg_llvm/: Cargo.toml
backend/codegen/: Cargo.toml
backend/codegen/cranelift/: Cargo.toml
common/: Cargo.toml
common/ast/: Cargo.toml
common/ast/src/: ast.rs
common/src/: ast.rs  fs.rs  fxhash.rs  interner.rs  lib.rs
common/src/fs/: in_memory_file.rs  in_memory_file_storage.rs  location.rs  path_resolver.rs
compiler/: Cargo.toml
compiler/src/: main.rs
docs/: contributing.org  style_guide.org  syntax.org
docs/sketches/: assoc_type.tn  whereclause.tn
docs/venta/: basics.org
frontend/lexer/: Cargo.toml
frontend/lexer/src/: lib.rs
frontend/parse/: Cargo.toml
frontend/parse/src/: lib.rs  parsers.rs
frontend/parser/: Cargo.toml
frontend/parser/src/: adapters.rs  error.rs  lib.rs
frontend/reporting/: Cargo.toml
frontend/reporting/examples/: multifile.rse  multiline.rse  simple.rse  stresstest.rse
frontend/reporting/src/: lib.rs
frontend/tangic/: Cargo.toml
frontend/tangic/src/: main.rs
middle/: Cargo.toml
middle/ast/: Cargo.toml
middle/ast/src/: lib.rs
middle/explod/: Cargo.toml
middle/explod/src/: fmter.rs  lib.rs  protocol.rs
middle/hir/: Cargo.toml
middle/src/: index.rs  lib.rs  mir.rs  ty.rs
middle/src/index/: idxslice.rs  indexing.rs  macros.rs
middle/src/util/: explode.rs
