[workspace]
members = [
        #! Frontend, i.e. the userfacing stuff
        # `tangic` binary
        "frontend/tangic",
        "frontend/parse",
        "frontend/reporting",
        #! Common, i.e. the stuff that is needed in both frontend and backend
        "common",
        #! Backend, i.e. codegen
        "backend/cg_llvm"
]

resolver = "2"

[workspace.dependencies]
tangic_common.path = "common"
