[workspace]
members = [
  "middle/ast",
  "middle/hir",
  "compiler",
  "frontend/lexer",
  "frontend/parser",
  "backend/codegen",
  "backend/codegen/cranelift"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tangic_ast.path = "middle/ast"
tangic_hir.path = "middle/hir"
tangic_lexer.path = "frontend/lexer"
tangic_parser.path = "frontend/parser"
miette = { version = "5.10", features = [ "fancy" ] }
bitflags = "2"
thiserror = "1.0"
derive_more = "0.99"
