[package]
name = "tangic_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
# aott = { git = "https://github.com/Implodent/AOTT.git", branch = "w0.3" }
aott = { path = "/mnt/k/implodent/aott", features = ["tracing"] }
derive_more = "0.99.17"
logos = "0.13.0"
tangic_common.workspace = true
thiserror = "1.0.47"
tracing = "0.1.37"
