[package]
name = "tangic_reporting"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Error reporting"

[dependencies]
tangic_common.workspace = true
serde = { version = "1.0.183", optional = true, features = ["derive"] }
termcolor = "1.2.0"
unicode-width = "0.1.10"

[features]
serde = ["dep:serde"]
